Create credential by reading tag
