# src/AppService/AppService.Application/Rfid/Commands/TagDataDto.cs
@@ -1,0 +1,13 @@
+﻿using System;
+namespace AppService.Application.Rfid.Commands
+{
+    public class TagDataDto
+    {
+        public TagDataDto(byte[] uid)
+        {
+            UID = uid;
+        }
+
+        public byte[] UID { get; }
+    }
+}
